# Quark

./: AUTHORS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HF_MODEL_CARD.md  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: publish-testpypi.yml  publish.yml
quark/: __init__.py  dedupe.py
tests/: test_dedupe.py
